unpackaged/main/default/objects/Titling__c/Titling__c.object-meta.xml
<CustomObject>
    <label>Titling</label>
    <nameField>
        <displayFormat>Title-{00000}</displayFormat>
        <label>Title Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Titling</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>