unpackaged/main/default/objects/Titling__c/fields/Credit_Analyst__c.field-meta.xml
<CustomField>
    <fullName>Credit_Analyst__c</fullName>
    <formula>Opportunity__r.Credit_Analyst__r.Full_Name__c</formula>
    <label>Credit Analyst</label>
    <type>Text</type>
</CustomField>