unpackaged/main/default/objects/Titling__c/fields/Lienholder__c.field-meta.xml
<CustomField>
    <fullName>Lienholder__c</fullName>
    <inlineHelpText>This field will be auto populated once a Residual Ownership Type is selected.</inlineHelpText>
    <label>Lienholder</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>