unpackaged/main/default/objects/Titling__c/fields/Make__c.field-meta.xml
<CustomField>
    <fullName>Make__c</fullName>
    <description>Used for VIN identification.</description>
    <label>Make</label>
    <length>255</length>
    <type>Text</type>
</CustomField>