unpackaged/main/default/objects/Titling__c/fields/Model__c.field-meta.xml
<CustomField>
    <fullName>Model__c</fullName>
    <description>Used for VIN identification.</description>
    <label>Model</label>
    <length>255</length>
    <type>Text</type>
</CustomField>