unpackaged/main/default/objects/Titling__c/fields/Residual_Ownership_Type__c.field-meta.xml
<CustomField>
    <fullName>Residual_Ownership_Type__c</fullName>
    <label>Residual Ownership Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>FMV</fullName>
            </value>
            <value>
                <fullName>EFA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>