unpackaged/main/default/objects/Titling__c/fields/Tax_Treatment__c.field-meta.xml
<CustomField>
    <fullName>Tax_Treatment__c</fullName>
    <label>Tax Treatment</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Residual_Ownership_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Stream</fullName>
            </value>
            <value>
                <fullName>Upfront</fullName>
            </value>
            <value>
                <fullName>Upfront on GR</fullName>
            </value>
            <value>
                <fullName>Not Upfront</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>