unpackaged/main/default/objects/Titling__c/fields/Title_Audit_Status__c.field-meta.xml
<CustomField>
    <fullName>Title_Audit_Status__c</fullName>
    <label>Title Audit Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>