unpackaged/main/default/objects/Titling__c/fields/Title_Fee__c.field-meta.xml
<CustomField>
    <fullName>Title_Fee__c</fullName>
    <label>Title Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>