unpackaged/main/default/objects/Titling__c/fields/Title_Instruction_Code_Type__c.field-meta.xml
<CustomField>
    <fullName>Title_Instruction_Code_Type__c</fullName>
    <label>Title Instruction Code Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>State__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>ELT #</fullName>
            </value>
            <value>
                <fullName>EIN#</fullName>
            </value>
            <value>
                <fullName>Lienholder Code</fullName>
            </value>
            <value>
                <fullName>NJ Corp Code</fullName>
            </value>
            <value>
                <fullName>Secured Party Code</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>