unpackaged/main/default/objects/Titling__c/fields/Title_Pkg_Out_Date__c.field-meta.xml
<CustomField>
    <fullName>Title_Pkg_Out_Date__c</fullName>
    <label>Title Pkg Out Date</label>
    <type>Date</type>
</CustomField>