unpackaged/main/default/objects/Titling__c/fields/Titleist__c.field-meta.xml
<CustomField>
    <fullName>Titleist__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Titleist</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Titling3</relationshipName>
    <type>Lookup</type>
</CustomField>