unpackaged/main/default/objects/Titling__c/fields/Year__c.field-meta.xml
<CustomField>
    <fullName>Year__c</fullName>
    <description>Used for VIN identification.</description>
    <label>Year</label>
    <length>255</length>
    <type>Text</type>
</CustomField>